@@ -6,7 +6,7 @@ use Data::HTML::Element::Select;
 use English;
 use Error::Pure::Utils qw(clean);
 use Tags::HTML::Element::Select;
-use Test::More 'tests' => 4;
+use Test::More 'tests' => 6;
 use Test::NoWarnings;
 
 # Test.
@@ -32,6 +32,46 @@ is_deeply(
 		['e'],
 	],
 	'Get CSS::Struct code (default).',
+);
+
+# Test.
+$css = CSS::Struct::Output::Structure->new;
+$select = Data::HTML::Element::Select->new(
+	'css_class' => 'my-class',
+);
+$obj = Tags::HTML::Element::Select->new(
+	'css' => $css,
+);
+$obj->init($select);
+$obj->process_css;
+$ret_ar = $css->flush(1);
+is_deeply(
+	$ret_ar,
+	[
+		['s', 'select.my-class'],
+		['d', 'width', '100%'],
+		['d', 'padding', '12px 20px'],
+		['d', 'margin', '8px 0'],
+		['d', 'display', 'inline-block'],
+		['d', 'border', '1px solid #ccc'],
+		['d', 'border-radius', '4px'],
+		['d', 'box-sizing', 'border-box'],
+		['e'],
+	],
+	'Get CSS::Struct code (with CSS class).',
+);
+
+# Test.
+$css = CSS::Struct::Output::Structure->new;
+$obj = Tags::HTML::Element::Select->new(
+	'css' => $css,
+);
+$obj->process_css;
+$ret_ar = $css->flush(1);
+is_deeply(
+	$ret_ar,
+	[],
+	'Get CSS::Struct code (without initialization).',
 );
 
 # Test.
