@@ -1,5 +1,6 @@
 0.14
  - Add test for Option.
+ - Add tests for Select.
  - Remove obsolete code.
  - Rewrite tests from CSS::Struct::Output::Indent to
    CSS::Struct::Output::Structure.
